fix #233 bug display list with center align

--- a/client/app/slides/components/editor/slide-creator/slide-creator.component.scss
+++ b/client/app/slides/components/editor/slide-creator/slide-creator.component.scss
@@ -24,8 +24,9 @@
 :host /deep/ .fr-box {
     width: 100%;
     //background: transparent;
-    ul{
+    ul, ol{
       padding:40px;
+      list-style-position: inside;
     }
     /*&:active,
     &:focus {
